<resources>
    <string name="app_name">Keystroke</string>
    <string name="input_field">Input keys</string>
    <string name="checkbox">Send each key stroke</string>
    <string name="button_text">Send</string>
    <string name="ipField_hint">IP address</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_new_connection">New Connection</string>

    <!-- Common Buttons -->
    <string name="save_action">Save</string>
    <string name="cancel_action">Cancel</string>
    <string name="add_action">Add</string>

    <string name="application_icon_desc">Application image</string>

    <string name="change_icon_button">Change Icon</string>

    <!-- Input Field Hints -->
    <string name="name_edit_text_hint">Name</string>
    <string name="host_edit_text_hint">IP Address</string>
    <string name="port_edit_text_hint">Port</string>
    <string name="mac_edit_text_hint">MAC Address</string>
    <string name="command_edit_text_hint">Command</string>
    <string name="arg_edit_text_hint">Args</string>
    <string name="title_activity_add_application">Add Application</string>
    <string name="delete_context_menu_item">Delete</string>
    <string name="edit_context_menu_item">Edit</string>
    <string name="keystroke_button">Send</string>

    <!--Overflow items-->
    <string name="keystrokeSwitch">Toggle Keystroke</string>
    <string name="wol_context_item">Wake-On-LAN</string>
</resources>
