<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/add_connection"
        tools:context=".activity.AddConnection">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/name_edit_text_hint"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/host_edit_text_hint"
            android:ems="10"
            android:id="@+id/hostEditText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/portEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/hostEditText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/port_edit_text_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/mac_edit_text_hint"
            android:ems="10"
            android:id="@+id/macAddressEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/portEditText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>