<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/add_application"
        tools:context=".activity.AddApplication">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/name_edit_text_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" android:hint="@string/command_edit_text_hint"
            android:id="@+id/commandEditText" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/argsEditText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/commandEditText" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/arg_edit_text_hint"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@color/design_default_color_primary"
            android:id="@+id/appIconView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/argsEditText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/change_icon_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/changeIconButton" app:layout_constraintStart_toEndOf="@+id/appIconView"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toBottomOf="@+id/argsEditText"
            android:onClick="chooseNewIcon"/>


</android.support.constraint.ConstraintLayout>